Fixed the GNUstep build

--- a/DataStructures.subproj/GNUmakefile
+++ b/DataStructures.subproj/GNUmakefile
@@ -1,5 +1,5 @@
 # DataStructures.subproj
-# $Id: GNUmakefile,v 2.2 2003-01-03 16:08:59 znek Exp $
+# $Id: GNUmakefile,v 2.3 2003-02-07 18:24:08 znek Exp $
 
 
 ifeq "$(GNUSTEP_SYSTEM_ROOT)" ""
@@ -23,15 +23,15 @@ EDAOMTagProcessor.h             EDNumberSet.h \
 EDBitmapCharset.h               EDObjectPair.h \
 EDIRCObject.h                   EDObjectReference.h \
 EDLRUCache.h                    EDRange.h \
-EDLightWeightLock.h             EDRedBlackTree+Private.h \
-EDMLParser.h                    EDRedBlackTree.h \
+EDLightWeightLock.h            \
+EDMLParser.h                    EDSortedArray.h \
 EDMLTagProcessorProtocol.h      EDSparseClusterArray.h \
 EDMLToken.h                     EDStack.h \
 EDMutableObjectPair.h           EDStringScanner.h
 
 
 DataStructures.subproj_OBJC_FILES = \
-EDBitmapCharset.m         EDMLToken.m               EDRedBlackTree.m \
+EDBitmapCharset.m         EDMLToken.m               EDSortedArray.m \
 EDIRCObject.m             EDNumberSet.m             EDSparseClusterArray.m \
 EDLRUCache.m              EDObjectPair.m            EDStack.m \
 EDAOMTagProcessor.m 	  EDObjectReference.m       EDStringScanner.m \
