Updated for current version

--- a/DataStructures.subproj/GNUmakefile
+++ b/DataStructures.subproj/GNUmakefile
@@ -1,5 +1,5 @@
 # DataStructures.subproj
-# $Id: GNUmakefile,v 2.3 2003-02-07 18:24:08 znek Exp $
+# $Id: GNUmakefile,v 2.4 2003-05-27 00:06:28 znek Exp $
 
 
 ifeq "$(GNUSTEP_SYSTEM_ROOT)" ""
@@ -19,23 +19,33 @@ SUBPROJECT_NAME = DataStructures.subproj
 
 
 DataStructures.subproj_HEADER_FILES = \
-EDAOMTagProcessor.h             EDNumberSet.h \
-EDBitmapCharset.h               EDObjectPair.h \
-EDIRCObject.h                   EDObjectReference.h \
-EDLRUCache.h                    EDRange.h \
-EDLightWeightLock.h            \
-EDMLParser.h                    EDSortedArray.h \
-EDMLTagProcessorProtocol.h      EDSparseClusterArray.h \
-EDMLToken.h                     EDStack.h \
-EDMutableObjectPair.h           EDStringScanner.h
+EDAOMTagProcessor.h             EDSparseClusterArray.h \
+EDBitmapCharset.h               EDStack.h \
+EDIRCObject.h                   EDStringScanner.h \
+EDLRUCache.h                    EDXMLAttribute.h \
+EDLightWeightLock.h             EDXMLCharacterData.h \
+EDMLParser.h                    EDXMLDOMTagProcessor.h \
+EDMLTagProcessorProtocol.h      EDXMLDocument.h \
+EDMLToken.h                     EDXMLDocumentFragment.h \
+EDMutableObjectPair.h           EDXMLElement.h \
+EDNumberSet.h                   EDXMLNamedNodeMap.h \
+EDObjectPair.h \
+EDObjectReference.h             EDXMLNode.h \
+EDRange.h                       EDXMLNodeList.h \
+EDXMLText.h \
+EDSortedArray.h                 EDXMLTreeWalker.h
 
 
 DataStructures.subproj_OBJC_FILES = \
-EDBitmapCharset.m         EDMLToken.m               EDSortedArray.m \
-EDIRCObject.m             EDNumberSet.m             EDSparseClusterArray.m \
-EDLRUCache.m              EDObjectPair.m            EDStack.m \
-EDAOMTagProcessor.m 	  EDObjectReference.m       EDStringScanner.m \
-EDMLParser.m              EDRange.m                 EDMutableObjectPair.m
+EDAOMTagProcessor.m     EDObjectReference.m     EDXMLDocument.m \
+EDBitmapCharset.m       EDRange.m               EDXMLDocumentFragment.m \
+EDIRCObject.m           EDSortedArray.m         EDXMLElement.m \
+EDLRUCache.m            EDSparseClusterArray.m  EDXMLNamedNodeMap.m \
+EDMLParser.m            EDStack.m               EDXMLNode.m \
+EDMLToken.m             EDStringScanner.m       EDXMLNodeList.m \
+EDMutableObjectPair.m   EDXMLAttribute.m        EDXMLText.m \
+EDNumberSet.m           EDXMLCharacterData.m    EDXMLTreeWalker.m \
+EDObjectPair.m          EDXMLDOMTagProcessor.m
 
 
 DataStructures.subproj_HAS_RESOURCE_BUNDLE = yes
