Overhauled the GNUstep build process. Build does work now on Mac OS X as well, Version is now contained in a single file (Version). Target specific settings as required on the specific platforms are set in a central place (GNUstepBuild). All GNUmakefiles include this file. Also, removed the conditional inclusion of Makefile.{preamble|postamble} in GNUstep builds - I don't think that this was a good idea to do so before, as the build systems differ significantly.

--- a/AppKitExtensions.subproj/GNUmakefile
+++ b/AppKitExtensions.subproj/GNUmakefile
@@ -1,5 +1,5 @@
 # AppKitExtensions.subproj
-# $Id: GNUmakefile,v 2.1 2002-09-29 23:17:55 znek Exp $
+# $Id: GNUmakefile,v 2.2 2003-10-21 16:26:39 znek Exp $
 
 
 ifeq "$(GNUSTEP_SYSTEM_ROOT)" ""
@@ -10,28 +10,26 @@ include $(GNUSTEP_MAKEFILES)/common.make
 
 ADDITIONAL_INCLUDE_DIRS = -I.. -I../FoundationExtensions.subproj
 
-ifeq "$(OBJC_RUNTIME_LIB)" "gnu"
-ADDITIONAL_OBJCFLAGS += -DGNU_RUNTIME
-endif
-
 
 SUBPROJECT_NAME = AppKitExtensions.subproj
 
 
 AppKitExtensions.subproj_HEADER_FILES = \
 EDApplication.h                         NSPasteboard+Extensions.h \
-NSTableColumn+Extensions.h		EDKeyControlWindow.h \
-NSApplication+Extensions.h              NSTableView+Extensions.h \
-NSAttributedString+AppKitExtensions.h   NSWindow+Extensions.h \
-NSMatrix+Extensions.h                   NSWorkspace+Extensions.h
+EDKeyControlWindow.h                    NSTableColumn+Extensions.h \
+EDToolbarDefinition.h                   NSTableView+Extensions.h \
+NSApplication+Extensions.h              NSWindow+Extensions.h \
+NSAttributedString+AppKitExtensions.h   NSWorkspace+Extensions.h \
+NSMatrix+Extensions.h \
 
 
 AppKitExtensions.subproj_OBJC_FILES = \
 EDApplication.m                         NSPasteboard+Extensions.m \
-NSTableColumn+Extensions.m		EDKeyControlWindow.m \
-NSApplication+Extensions.m              NSTableView+Extensions.m \
-NSAttributedString+AppKitExtensions.m   NSWindow+Extensions.m \
-NSMatrix+Extensions.m                   NSWorkspace+Extensions.m
+EDKeyControlWindow.m                    NSTableColumn+Extensions.m \
+EDToolbarDefinition.m                   NSTableView+Extensions.m \
+NSApplication+Extensions.m              NSWindow+Extensions.m \
+NSAttributedString+AppKitExtensions.m   NSWorkspace+Extensions.m \
+NSMatrix+Extensions.m \
 
 
 AppKitExtensions.subproj_HAS_RESOURCE_BUNDLE = yes
@@ -40,14 +38,13 @@ AppKitExtensions.subproj_HAS_RESOURCE_BUNDLE = yes
 AppKitExtensions.subproj_RESOURCE_FILES = arrows.tiff
 
 
--include Makefile.preamble
+include ../GNUstepBuild
+
 
 -include GNUmakefile.preamble
 
 include $(GNUSTEP_MAKEFILES)/subproject.make
 
 -include GNUmakefile.postamble
-
--include Makefile.postamble
 
 endif
