--- a/Makefile.preamble
+++ b/Makefile.preamble
@@ -138,8 +138,8 @@ PREINDEX_FRAMEWORK = NO
 DSTROOT = $(NEXT_ROOT)
 
 # Variables for versioning system
-CURRENT_PROJECT_VERSION = 32
-COMPATIBILITY_PROJECT_VERSION = 32
+include Version
+
 VERSIONING_SYSTEM = apple-generic
 VERSION_INFO_PREFIX =
 
