--- a/Widgets.subproj/GNUmakefile
+++ b/Widgets.subproj/GNUmakefile
@@ -1,5 +1,5 @@
 # Widgets.subproj
-# $Id: GNUmakefile,v 2.0 2002-08-16 18:12:50 erik Exp $
+# $Id: GNUmakefile,v 2.1 2003-10-21 16:26:42 znek Exp $
 
 
 ifeq "$(GNUSTEP_SYSTEM_ROOT)" ""
@@ -7,10 +7,6 @@ ifeq "$(GNUSTEP_SYSTEM_ROOT)" ""
 else
 
 include $(GNUSTEP_MAKEFILES)/common.make
-
-ifeq "$(OBJC_RUNTIME_LIB)" "gnu"
-ADDITIONAL_OBJCFLAGS += -DGNU_RUNTIME
-endif
 
 ADDITIONAL_INCLUDE_DIRS = -I..
 
@@ -28,14 +24,13 @@ EDActivityIndicator.m   EDObjectWell.m          EDTVScrollView.m \
 EDCanvas.m              EDSwapView.m            EDTableView.m
 
 
--include Makefile.preamble
+include ../GNUstepBuild
+
 
 -include GNUmakefile.preamble
 
 include $(GNUSTEP_MAKEFILES)/subproject.make
 
 -include GNUmakefile.postamble
-
--include Makefile.postamble
 
 endif
